# seoul_oasis

./: README.md  pyproject.toml
.github/workflows/: ci.yml
seoul_oasis/: hooks.py  modules.txt
seoul_oasis/events/: sales_order.py
seoul_oasis/fixtures/: custom_field.json
seoul_oasis/public/js/: address.js  sales_invoice_item.js  sales_order_item.js
seoul_oasis/seoul_oasis/doctype/subsidiary/: subsidiary.js  subsidiary.json  subsidiary.py  test_subsidiary.py
seoul_oasis/seoul_oasis/report/statement_of_account/: statement_of_account.html  statement_of_account.js  statement_of_account.json  statement_of_account.py
